force-app/main/default/objects/PDFBuilderSettings__mdt/PDFBuilderSettings__mdt.object-meta.xml
<CustomObject>
    <description>Central configuration for PDF Builder editing, preview pagination, image handling, and Visualforce PDF rendering.</description>
    <label>PDF Builder Settings</label>
    <pluralLabel>PDF Builder Settings</pluralLabel>
</CustomObject>