force-app/main/default/objects/PDFBuilderSettings__mdt/fields/AIExtensionPackageVersionId__c.field-meta.xml
<CustomField>
    <fullName>AIExtensionPackageVersionId__c</fullName>
    <description
  >Subscriber package version ID for the optional PDF Builder AI extension.</description>
    <label>AI Extension Package Version ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>