force-app/main/default/objects/PDFBuilderSettings__mdt/fields/AIMaxContextLength__c.field-meta.xml
<CustomField>
    <fullName>AIMaxContextLength__c</fullName>
    <description
  >Maximum number of characters included from each serialized AI Wizard context payload.</description>
    <label>AI Maximum Context Length</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>