force-app/main/default/objects/PDFBuilderSettings__mdt/fields/AIMaxPromptLength__c.field-meta.xml
<CustomField>
    <fullName>AIMaxPromptLength__c</fullName>
    <description
  >Maximum number of characters accepted from an AI Wizard instruction.</description>
    <label>AI Maximum Prompt Length</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>