force-app/main/default/objects/PDFBuilderSettings__mdt/fields/AIModelApiName__c.field-meta.xml
<CustomField>
    <fullName>AIModelApiName__c</fullName>
    <description
  >API name of the Salesforce AI model configuration used by the guided wizard.</description>
    <label>AI Model API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>