force-app/main/default/objects/PDFBuilderSettings__mdt/fields/AIPromptInstructions__c.field-meta.xml
<CustomField>
    <fullName>AIPromptInstructions__c</fullName>
    <description
  >System instructions that define the JSON contract and supported PDF Builder capabilities for Salesforce AI.</description>
    <label>AI Prompt Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>