force-app/main/default/objects/PDFBuilderSettings__mdt/fields/AIProviderLabel__c.field-meta.xml
<CustomField>
    <fullName>AIProviderLabel__c</fullName>
    <description
  >User-facing label for the AI service configured for the guided wizard.</description>
    <label>AI Provider Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>