force-app/main/default/objects/PDFBuilderSettings__mdt/fields/AISetupDocumentationUrl__c.field-meta.xml
<CustomField>
    <fullName>AISetupDocumentationUrl__c</fullName>
    <description
  >HTTPS documentation URL shown when Models API is not provisioned.</description>
    <label>AI Setup Documentation URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>