force-app/main/default/objects/PDFBuilderSettings__mdt/fields/AIUnavailableMessage__c.field-meta.xml
<CustomField>
    <fullName>AIUnavailableMessage__c</fullName>
    <description
  >Message shown when Salesforce AI is disabled or Models API is unavailable.</description>
    <label>AI Unavailable Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>