force-app/main/default/objects/PDFBuilderSettings__mdt/fields/DefaultElementPaddingPx__c.field-meta.xml
<CustomField>
    <fullName>DefaultElementPaddingPx__c</fullName>
    <description
  >Default inner padding, in CSS pixels, assigned to new builder elements.</description>
    <label>Default Element Padding Px</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>