force-app/main/default/objects/PDFBuilderSettings__mdt/fields/DefaultFooterHeightPx__c.field-meta.xml
<CustomField>
    <fullName>DefaultFooterHeightPx__c</fullName>
    <description
  >Default footer region height, in CSS pixels, for newly created templates.</description>
    <label>Default Footer Height Px</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>