force-app/main/default/objects/PDFBuilderSettings__mdt/fields/DefaultHeaderHeightPx__c.field-meta.xml
<CustomField>
    <fullName>DefaultHeaderHeightPx__c</fullName>
    <description
  >Default header region height, in CSS pixels, for newly created templates.</description>
    <label>Default Header Height Px</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>