force-app/main/default/objects/PDFBuilderSettings__mdt/fields/DefaultPagePaddingPx__c.field-meta.xml
<CustomField>
    <fullName>DefaultPagePaddingPx__c</fullName>
    <description
  >Default page padding, in CSS pixels, for newly created templates.</description>
    <label>Default Page Padding Px</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>