force-app/main/default/objects/PDFBuilderSettings__mdt/fields/DragGridSizePx__c.field-meta.xml
<CustomField>
    <fullName>DragGridSizePx__c</fullName>
    <description
  >Grid increment, in CSS pixels, used when positioning elements by drag and drop.</description>
    <label>Drag Grid Size Px</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>