force-app/main/default/objects/PDFBuilderSettings__mdt/fields/EnableAIWizard__c.field-meta.xml
<CustomField>
    <fullName>EnableAIWizard__c</fullName>
    <description
  >Enables the Salesforce AI prompt area in the guided PDF Builder wizard.</description>
    <label>Enable AI Wizard</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>