force-app/main/default/objects/PDFBuilderSettings__mdt/fields/ImageQueryLimit__c.field-meta.xml
<CustomField>
    <fullName>ImageQueryLimit__c</fullName>
    <description
  >Maximum number of matching Salesforce Files returned by the image picker.</description>
    <label>Image Query Limit</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>