force-app/main/default/objects/PDFBuilderSettings__mdt/fields/IncludeCustomObjects__c.field-meta.xml
<CustomField>
    <fullName>IncludeCustomObjects__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >Controls whether accessible custom objects are available in the builder object selector.</description>
    <label>Include All Custom Objects</label>
    <type>Checkbox</type>
</CustomField>