force-app/main/default/objects/PDFBuilderSettings__mdt/fields/InputDebounceMs__c.field-meta.xml
<CustomField>
    <fullName>InputDebounceMs__c</fullName>
    <description
  >Delay, in milliseconds, applied to builder inputs that defer expensive updates.</description>
    <label>Input Debounce Ms</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>