force-app/main/default/objects/PDFBuilderSettings__mdt/fields/LongTextLimit__c.field-meta.xml
<CustomField>
    <fullName>LongTextLimit__c</fullName>
    <description
  >Maximum number of characters accepted for template JSON and generated HTML.</description>
    <label>Long Text Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>