force-app/main/default/objects/PDFBuilderSettings__mdt/fields/MaxClientImageBase64__c.field-meta.xml
<CustomField>
    <fullName>MaxClientImageBase64__c</fullName>
    <description
  >Maximum Base64 string length accepted from the client when uploading a builder image.</description>
    <label>Maximum Client Image Base64</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>