force-app/main/default/objects/PDFBuilderSettings__mdt/fields/MaxPages__c.field-meta.xml
<CustomField>
    <fullName>MaxPages__c</fullName>
    <description
  >Maximum number of manual template pages available in the builder.</description>
    <label>Maximum Pages</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>