force-app/main/default/objects/PDFBuilderSettings__mdt/fields/PageHeightPx__c.field-meta.xml
<CustomField>
    <fullName>PageHeightPx__c</fullName>
    <description
  >Canonical page height, in CSS pixels, shared by builder preview and PDF rendering.</description>
    <label>Page Height Px</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>