force-app/main/default/objects/PDFBuilderSettings__mdt/fields/PageWidthPx__c.field-meta.xml
<CustomField>
    <fullName>PageWidthPx__c</fullName>
    <description
  >Canonical page width, in CSS pixels, shared by builder preview and PDF rendering.</description>
    <label>Page Width Px</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>