force-app/main/default/objects/PDFBuilderSettings__mdt/fields/PdfCanvasWidthPx__c.field-meta.xml
<CustomField>
    <fullName>PdfCanvasWidthPx__c</fullName>
    <description
  >Legacy PDF canvas width, in CSS pixels, used to translate positioned block layouts.</description>
    <label>PDF Canvas Width Px</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>