force-app/main/default/objects/PDFBuilderSettings__mdt/fields/PdfContentWidthPx__c.field-meta.xml
<CustomField>
    <fullName>PdfContentWidthPx__c</fullName>
    <description
  >Legacy PDF content width, in CSS pixels, used by compatible template layouts.</description>
    <label>PDF Content Width Px</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>