force-app/main/default/objects/PDFBuilderSettings__mdt/fields/PdfFontScale__c.field-meta.xml
<CustomField>
    <fullName>PdfFontScale__c</fullName>
    <description
  >Font compensation factor applied for Visualforce PDF metrics.</description>
    <label>PDF Font Scale</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>