force-app/main/default/objects/PDFBuilderSettings__mdt/fields/PdfGridColumns__c.field-meta.xml
<CustomField>
    <fullName>PdfGridColumns__c</fullName>
    <description>Number of columns in the legacy PDF grid layout.</description>
    <label>PDF Grid Columns</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>