force-app/main/default/objects/PDFBuilderSettings__mdt/fields/PdfGridGapPx__c.field-meta.xml
<CustomField>
    <fullName>PdfGridGapPx__c</fullName>
    <description
  >Gap, in CSS pixels, between legacy PDF grid columns.</description>
    <label>PDF Grid Gap Px</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>