force-app/main/default/objects/PDFBuilderSettings__mdt/fields/PdfGridRowHeightPx__c.field-meta.xml
<CustomField>
    <fullName>PdfGridRowHeightPx__c</fullName>
    <description
  >Row height, in CSS pixels, used by the legacy PDF grid layout.</description>
    <label>PDF Grid Row Height Px</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>