force-app/main/default/objects/PDFBuilderSettings__mdt/fields/PdfImageYOffsetPx__c.field-meta.xml
<CustomField>
    <fullName>PdfImageYOffsetPx__c</fullName>
    <description
  >Vertical image alignment compensation, in CSS pixels, for Visualforce PDF output.</description>
    <label>PDF Image Y Offset Px</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>