force-app/main/default/objects/PDFBuilderSettings__mdt/fields/PreferredObjectApiNames__c.field-meta.xml
<CustomField>
    <fullName>PreferredObjectApiNames__c</fullName>
    <description
  >Object API names shown first in the builder object selector. Enter one value per line or separate values with commas.</description>
    <label>Preferred Objects</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>