force-app/main/default/objects/PDFBuilderSettings__mdt/fields/RelatedListQueryLimit__c.field-meta.xml
<CustomField>
    <fullName>RelatedListQueryLimit__c</fullName>
    <description
  >Maximum related records rendered per related list block before a truncation notice is displayed.</description>
    <label>Related List Query Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>