force-app/main/default/objects/PDFBuilderSettings__mdt/fields/SupportedImageTypes__c.field-meta.xml
<CustomField>
    <fullName>SupportedImageTypes__c</fullName>
    <description
  >Comma-separated Salesforce FileType values accepted by the builder image picker.</description>
    <label>Supported Image Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>