force-app/main/default/objects/PDFBuilderSettings__mdt/fields/TemplateQueryLimit__c.field-meta.xml
<CustomField>
    <fullName>TemplateQueryLimit__c</fullName>
    <description
  >Maximum number of templates returned to the builder template selector.</description>
    <label>Template Query Limit</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>